add "Login to github registry"

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,12 +3,36 @@ name: Docker Image CI
 on: [push]
 
 jobs:
-
-  build:
-
-    runs-on: ubuntu-latest
-
+  github:
+    runs-on: ubuntu-latest    
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag vaple/phpcodesniffer:$(date +%y.%m)
+      - uses: actions/checkout@v2
+
+      - name: Login to github registry
+        uses: actions-hub/docker/login@master
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#          DOCKER_REGISTRY_URL: docker.pkg.github.com
+
+      - name: Build :lastest
+        if: success()
+        run: docker build . --file Dockerfile --tag vaple/phpcodesniffer:$(date +%y.%m)
+#        run: docker build -t docker.pkg.github.com/${{ github.repository }}/app:latest .
+        
+#      - name: Push to docker hub :latest
+#        if: success()
+#        uses: actions-hub/docker@master
+#        with:
+#          args: push docker.pkg.github.com/${{ github.repository }}:latest
+
+#jobs:
+#
+#  build:
+#
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Build the Docker image
+#      run: docker build . --file Dockerfile --tag vaple/phpcodesniffer:$(date +%y.%m)
