--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Push to docker hub
         if: success()
         uses: actions-hub/docker@master
-        with:
-          args: push docker.pkg.github.com/${{ github.repository }}:latest
+        run: docker push vaple/phpcodesniffer:latest
+#        with:
+#          args: push docker.pkg.github.com/${{ github.repository }}:latest
 
 #jobs:
 #
