--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,7 +22,7 @@ jobs:
         
       - name: Push to docker hub
         if: success()
-        uses: actions-hub/docker@master
+#        uses: actions-hub/docker@master
         run: docker push vaple/phpcodesniffer:latest
 #        with:
 #          args: push docker.pkg.github.com/${{ github.repository }}:latest
