--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,7 +6,7 @@ on:
     - cron:  '0 10 1 * *'
 
 jobs:
-  github:
+  Build image:
     runs-on: ubuntu-latest    
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
         with:
           args: push vaple/phpcodesniffer:latest
 
-      - name: Push to docker hub :`date +%y.%m`
+      - name: Push to docker hub :tag
         if: success()
         uses: actions-hub/docker@master
         with:
