--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,7 +6,7 @@ on:
     - cron:  '0 10 1 * *'
 
 jobs:
-  build image:
+  build_image:
     runs-on: ubuntu-latest    
     steps:
       - uses: actions/checkout@v2
