--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -9,6 +9,8 @@ jobs:
   build_image:
     runs-on: ubuntu-latest    
     steps:
+      - env:
+          REPO: vaple/phpcodesniffer
       - uses: actions/checkout@v2
 
       - name: Login to github registry
@@ -19,7 +21,7 @@ jobs:
 
       - name: Build image
         if: success()
-        run: docker build -t vaple/phpcodesniffer:latest -t vaple/phpcodesniffer:`date +%y.%m` .
+        run: docker build -t ${ REPO }:latest -t vaple/phpcodesniffer:`date +%y.%m` .
         
       - name: Push to docker hub :latest
         if: success()
