--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -35,7 +35,7 @@ jobs:
           args: push vaple/phpcodesniffer:`date +%y.%m`
 
       - name: Telegram notification
-      - uses: yanzay/notify-telegram@v0.1.0
+        uses: yanzay/notify-telegram@v0.1.0
         if: always()
         with:
           chat: ${{ secrets.chat }} # user id or channel name secret
